--- a/projects/clubs-hfc.html
+++ b/projects/clubs-hfc.html
@@ -50,8 +50,7 @@
         <section id="problem" class="content-section">
             <h2 class="section-title">Description</h2>
             <div class="section-content">
-                <p><strong>Situation:</strong> As the Hydrogen Lead for the UCLA Supermileage Vehicle team, I was tasked with integrating a hydrogen fuel cell to work seamlessly with the car's systems to supply continuous power to the wheels.</p>
-                <p><strong>Task:</strong> I led the initiative to design, analyze, and manufacture our own PEM open cathode fuel cell, ensuring it met the team's performance and integration requirements.</p>
+                <p><strong>Situation/Task:</strong> As the Hydrogen Lead for the UCLA Supermileage Vehicle team, I was tasked with integrating a hydrogen fuel cell to work with the car's systems to supply continuous power to the wheels. I also led the initiative to design, analyze, and manufacture our own PEM open cathode fuel cell, ensuring it met the team's performance and integration requirements.</p>
             </div>            
         </section>
 
@@ -134,6 +133,9 @@
                     <div class="image-container">
                         <img src="im16.png" alt="Image">
                     </div>
+                    <div class="image-container">
+                        <img src="im17.png" alt="Image">
+                    </div>
                 </div>
                 <div class="image-column">
                     <div class="image-container">
@@ -146,7 +148,7 @@
                         <img src="im4.png" alt="Image">
                     </div>
                     <div class="image-container">
-                        <img src="im1.png" alt="Image">
+                        <img src="im18.png" alt="Image">
                     </div>
                 </div>
                 <!-- <div class="image-column">
