--- a/projects/clubs-mk10s&c.html
+++ b/projects/clubs-mk10s&c.html
@@ -48,7 +48,7 @@
         <section id="problem" class="content-section">
             <h2 class="section-title">Description</h2>
             <div class="section-content">
-                <p>As the Sprocket Responsible Engineer for Bruin Formula Racing, I was tasked with designing the sprocket and chain assembly, which included the</p>
+                <p></p><strong>Situation/Task:</strong> As the Sprocket Responsible Engineer for Bruin Formula Racing, I was tasked with designing the sprocket and chain assembly, which included the</p>
                 <ul>
                     <li>Front/Rear Sprocket</li>
                     <li>Transmission Shaft</li>
@@ -74,7 +74,7 @@
                         <li>The involute splines at the center of the sprockets and on the motor shaft were also modeled to ensure proper alignment and functionality.</li>
                         <li>To reduce weight, I ran a Topology Optimization on the rear sprocket using Altair Inspire and iterated over cutouts.</li>
                         <li>Static simulations on Ansys Mechanical were conducted to verify that both sprockets passed with a 2x factor of safety, based on chain tension calculations.</li>
-                        <li>For the motor shaft, I selected a 17 teeth 17 DP 45-degree pressure angle spline and maximized the bore hole cutout, ensuring it didn't fail using hand calculations derived from maximum shear stress and normal stress theories.</li>
+                        <li>For the motor shaft, I selected a 17 teeth 17 DP 45-degree pressure angle (after performing analysis over the 30-degree pressure angle) spline and maximized the bore hole cutout, ensuring it didn't fail using hand calculations derived from maximum shear stress and normal stress theories.</li>
                         <li>A smaller chain, the 428VX, was selected over the previous year's 520 chain, allowing for closer sprockets and a larger FDR, which simulations indicated would maximize points.</li>
                     </ul>
                 </p>
