--- a/projects/clubs-mk9cb.html
+++ b/projects/clubs-mk9cb.html
@@ -46,7 +46,7 @@
         <section id="problem" class="content-section">
             <h2 class="section-title">Description</h2>
             <div class="section-content">
-                <p>Our Formula SAE car had a big issue: the suspension joints were way too close to the tripod housings and half shafts. No off-the-shelf CV Boots would fit without rubbing, which was a major problem. Not only would the car not be rules legal, but the half shaft joints wouldn't be protected, leading to potential disaster.
+                <p><b>Situation/Task:</b>Our Formula SAE car had a big issue: the suspension joints were way too close to the tripod housings and half shafts. No off-the-shelf CV Boots would fit without rubbing, which was a major problem. Not only would the car not be rules legal, but the half shaft joints wouldn't be protected, leading to potential disaster.
                 </p>
             </div>            
         </section>
