--- a/projects/personal-fdu.html
+++ b/projects/personal-fdu.html
@@ -55,7 +55,7 @@
         <section id="summary" class="content-section">
             <h2 class="section-title">Summary</h2>
             <div class="section-content">
-                <p><strong>Action:</strong> I started by measuring and planning the specifications for my project. I decided to use an old DC motor found in the junk, which spins at 550 RPM. To increase the torque, I implemented a lead screw linear actuation system. I designed and 3D printed components, fastened with m5/m3 screws, and used a bearing and an L298N motor driver to power the motor. The assembly was coded on Arduino and mounted onto the door with command strips. To accommodate the circular motion of the door handle, I created an end effector with a claw and a print-in-place hinge.</p>
+                <p><strong>Action:</strong> I started by measuring and planning the specifications for my project. I decided to use an old DC motor found in the junk, which spins at 550 RPM. To increase the torque, I implemented a lead screw linear actuation system. I designed and 3D printed components, fastened with m5/m3 screws, and used a bearing and an L298N motor driver to power the motor. The assembly was coded on Arduino and mounted onto the door with command strips. To account for the circular motion of the door handle, I created an end effector with a claw and a print-in-place hinge.</p>
                 <p><strong>Result:</strong> The device successfully opened the door in less than 3 seconds. However, I couldn't find many pictures of the project working before having to move out.</p>
             </div> 
         </section>
