--- a/projects/personal-sbr.html
+++ b/projects/personal-sbr.html
@@ -60,16 +60,16 @@
             </div>
         </section>
 
-        <section id="work" class="content-section">
+        <!-- <section id="work" class="content-section">
             <h2 class="section-title">My Work</h2>
             <div class="section-content">
                 <p>Wanted to make it as small as possible -- so first started off by doing some short hand calculations on the specs of motor and microcontrollers that I need.</p>
-                <!-- <ul>
+                <ul>
                     <li>FILLERWORK</li>
                     <li>FILLERWORK</li>
-                </ul> -->
+                </ul> 
             </div>
-        </section>
+        </section> -->
 
         <!-- <section id="results" class="content-section">
             <h2 class="section-title">Results</h2>
@@ -83,7 +83,7 @@
         </section> -->
 
         <section id="lessons" class="content-section">
-            <h2 class="section-title">Lessons Learned</h2>
+            <h2 class="section-title">Summary</h2>
             <div class="section-content">
                 <p><strong>Action:</strong> I engaged in circuit design, and applied circuit theory in real-life scenarios alongside short hand calculations to spec out motors and microcontrollers necessary. I also focused on the mounting and placement of electrical systems. Additionally, I explored control theory with PID control.</p>
                 <p><strong>Result:</strong> Through this project, I gained valuable skills in Arduino Nano, soldering, product design, and surface modeling.</p>
