--- a/projects/personal-misc.html
+++ b/projects/personal-misc.html
@@ -395,7 +395,7 @@
                         <h2 class="project-name">Wind Up Car</h2>
                     </div>
                     <div class="project-date">2023</div>
-                    <p class="project-description">Designed and 3d Printed rubber band powered wind-up car within given dimensions, iterated over 2 versions and </p>
+                    <p class="project-description">Designed and 3d Printed rubber band powered wind-up car within given dimensions, iterated over 2 versions. </p>
                     <div class="project-skills">
                         <span class="skill-tag">3D Printing</span>
                         <span class="skill-tag">Rapid Prototyping</span>
