--- a/projects/clubs-mk10s&c.html
+++ b/projects/clubs-mk10s&c.html
@@ -48,7 +48,7 @@
         <section id="problem" class="content-section">
             <h2 class="section-title">Description</h2>
             <div class="section-content">
-                <p></p><strong>Situation/Task:</strong> As the Sprocket Responsible Engineer for Bruin Formula Racing, I was tasked with designing the sprocket and chain assembly, which included the</p>
+                <p><strong>Situation/Task:</strong> As the Sprocket Responsible Engineer for Bruin Formula Racing, I was tasked with designing the sprocket and chain assembly, which included the</p>
                 <ul>
                     <li>Front/Rear Sprocket</li>
                     <li>Transmission Shaft</li>
