--- a/projects/index.html
+++ b/projects/index.html
@@ -587,7 +587,7 @@
                     </div>
                 </a> -->
                 <!-- <a href="personal-lr.html" class="project-link"> -->
-                <a href="inprogress.html" class="project-link">
+                <a href="personal-lr.html" class="project-link">
                     <div class="project-card" style="background-image: url('/images/personal-project.jpg')">
                         <span class="project-year">2024</span>
                         <h2 class="project-title">Linear Rails</h2>
