--- a/projects/projtemplate.html
+++ b/projects/projtemplate.html
@@ -28,65 +28,71 @@
         <a href="/notes/">NOTES</a>
     </nav>
 
-    <nav class="table-of-contents">
-        <!-- <h2 class="toc-title">Jump To</h2> -->
-        <ul class="toc-list">
-            <li><a href="#problem">Description</a></li>
-            <li><a href="#work">My Work</a></li>
-            <li><a href="#results">Results</a></li>
-            <li><a href="#lessons">Lessons Learned</a></li>
-        </ul>
-    </nav>
-
     <main>
         <header class="project-header">
             <h1 class="project-title">FILLERTITLE</h1>
             <div class="skills-section">
                 <h2 class="skills-title">Skills Gained</h2>
                 <div class="skills-list">
-                    <span class="skill-tag">FILLERSKILLS</span>
-                    <span class="skill-tag">FILLERSKILLS</span>
+                    <span class="skill-tag">FILLER</span>
+                    <span class="skill-tag">FILLER</span>
                 </div>
             </div>
         </header>
 
         <section id="problem" class="content-section">
-            <h2 class="section-title">Problem Statement</h2>
+            <h2 class="section-title">Description</h2>
             <div class="section-content">
-                <p>FILLERDESCRIPTION</p>
+                <strong>Situation/Task:</strong> <p>FILLER</p>
             </div>
         </section>
 
-        <section id="work" class="content-section">
-            <h2 class="section-title">My Work</h2>
+        <section id="summary" class="content-section">
+            <h2 class="section-title">Summary</h2>
             <div class="section-content">
-                <p>FILLERDESCRIPTION</p>
-                <ul>
-                    <li>FILLERWORK</li>
-                    <li>FILLERWORK</li>
-                </ul>
+                <p><strong>Action</strong>:
+                    <ul>
+                        <li>FILLER</li>
+                        <li>FILLER</li>
+                        <li>FILLER</li>
+                    </ul>
+                </p>
+                <p><strong>Result</strong>: FILLER</p>
             </div>
         </section>
 
-        <section id="results" class="content-section">
-            <h2 class="section-title">Results</h2>
+        <section id="images" class="content-section">
+            <h2 class="section-title">Images</h2>
             <div class="section-content">
-                <p>FILLERDESCRIPTION</p>
-                <ul>
-                    <li>FILLERRESULTS</li>
-                    <li>FILLERRESULTS</li>
-                </ul>
+                <p>More pictures coming soon!</p>
             </div>
-        </section>
-
-        <section id="lessons" class="content-section">
-            <h2 class="section-title">Lessons Learned</h2>
-            <div class="section-content">
-                <p>FILLERDESCRIPTION</p>
-                <ul>
-                    <li>FILLERLESSON</li>
-                    <li>FILLERLESSON</li>
-                </ul>
+            <div class="image-grid">
+                <div class="image-column">
+                    <div class="image-container">
+                        <img src="pp-cover.png" alt="Image">
+                    </div>
+                    <div class="image-container">
+                        <img src="im1.png" alt="Image">
+                    </div>
+                </div>
+                <div class="image-column">
+                    <div class="image-container">
+                        <img src="im4.png" alt="Image">
+                    </div>
+                    <div class="image-container">
+                        <img src="im5.png" alt="Image 5">
+                    </div>
+                </div>
+                <div class="image-column">
+                    <div class="image-container">
+                        <img src="im2.png" alt="Image">
+                    </div>
+                </div>
+                <div class="image-column">
+                    <div class="image-container">
+                        <img src="im3.png" alt="Image 5">
+                    </div>
+                </div>
             </div>
         </section>
     </main>
