--- a/projects/personal-lr.html
+++ b/projects/personal-lr.html
@@ -69,7 +69,7 @@
                 <div class="gallery-grid">
                     <div class="gallery-item">
                         <img src="step1.png" alt="Image" class="gallery-image">
-                        <p class="gallery-caption">No Preload</p>
+                        <p class="gallery-caption">First Iteration</p>
                     </div>
                     <div class="gallery-item">
                         <img src="step2.png" alt="Image" class="gallery-image">
