--- a/projects/personal-sbr.html
+++ b/projects/personal-sbr.html
@@ -85,8 +85,8 @@
         <section id="lessons" class="content-section">
             <h2 class="section-title">Summary</h2>
             <div class="section-content">
-                <p><strong>Action:</strong> I engaged in circuit design, and applied circuit theory in real-life scenarios alongside short hand calculations to spec out motors and microcontrollers necessary. I also focused on the mounting and placement of electrical systems. Additionally, I explored control theory with PID control.</p>
-                <p><strong>Result:</strong> Through this project, I gained valuable skills in Arduino Nano, soldering, product design, and surface modeling.</p>
+                <p><strong>Action:</strong> I applied circuit theory in real-life scenarios along with hand calculations to spec out motors, powersource, and microcontrollers necessary -- then I used circuit theory and datasheets to connect them all together and prototype on a breadboard. I also focused on the mounting and placement of electrical systems to fit compactly within a form factor, while also being easily printed and assembled. Finally, I used PID control to balance the robot.</p>
+                <p><strong>Result:</strong> Through this project, I gained valuable skills in using the Arduino Nano alongside electrical components, crimping/soldering/assembling electrical components, surface modeling, and PID control.</p>
             </div>
         </section>
 
