--- a/projects/index.html
+++ b/projects/index.html
@@ -490,13 +490,21 @@
         <div class="project-section" id="clubs-section">
             <h2>Extracurricular Clubs</h2>
             <div class="projects-grid">
+                <a href="inprogress.html" class="project-link">
+                    <div class="project-card" style="background-image: url('/projects/images/mk10s&c/mk11dtl-cover.png')">
+                        <span class="project-year">2025</span>
+                        <h2 class="project-title">Mk 11 Drivetrain</h2>
+                        <p class="project-aff">Formula SAE</p>
+                        <p class="project-description">Led development of drivetrain system for our Mk11 Formula SAE car.</p>
+                        <div class="tags-container"></div>
+                    </div>
+                </a>
                 <a href="clubs-mk10s&c.html" class="project-link">
                     <div class="project-card" style="background-image: url('/projects/images/mk10s&c/mk10s&c-cover.png')">
                         <span class="project-year">2024</span>
                         <h2 class="project-title">Mk 10 Sprocket and Chain</h2>
                         <p class="project-aff">Formula SAE</p>
                         <p class="project-description">Designed and optimized sprockets, chain, and transmission shaft.</p>
-                        <span class="resume-star">★</span>
                         <div class="tags-container"></div>
                     </div>
                 </a>
@@ -504,9 +512,8 @@
                     <div class="project-card" style="background-image: url('/projects/images/hfc/hfc-cover.png')">
                         <span class="project-year">2024</span>
                         <h2 class="project-title">Hydrogen Fuel Cell</h2>
-                        <p class="project-aff">Supermileage</p>
+                        <p class="project-aff">Bruin Supermileage</p>
                         <p class="project-description">Designed and implemented a 1kW hydrogen fuel cell system.</p>
-                        <span class="resume-star">★</span>
                         <div class="tags-container"></div>
                     </div>
                 </a>
@@ -547,7 +554,6 @@
                         <span class="project-year">2025</span>
                         <h2 class="project-title">Self Balancing Robot</h2>
                         <p class="project-description">Cute compact self balancing robot featuring PID control.</p>
-                        <span class="resume-star">★</span>
                         <div class="tags-container"></div>
                     </div>
                 </a>
