--- a/projects/index.html
+++ b/projects/index.html
@@ -493,7 +493,7 @@
                 <a href="inprogress.html" class="project-link">
                     <div class="project-card" style="background-image: url('/projects/images/mk10s&c/mk11dtl-cover.png')">
                         <span class="project-year">2025</span>
-                        <h2 class="project-title">Mk 11 Drivetrain</h2>
+                        <h2 class="project-title">Mk 11 Drivetrain Lead</h2>
                         <p class="project-aff">Formula SAE</p>
                         <p class="project-description">Led development of drivetrain system for our Mk11 Formula SAE car.</p>
                         <div class="tags-container"></div>
@@ -505,6 +505,7 @@
                         <h2 class="project-title">Mk 10 Sprocket and Chain</h2>
                         <p class="project-aff">Formula SAE</p>
                         <p class="project-description">Designed and optimized sprockets, chain, and transmission shaft.</p>
+                        <span class="resume-star">★</span>
                         <div class="tags-container"></div>
                     </div>
                 </a>
@@ -523,7 +524,6 @@
                         <h2 class="project-title">Mk 9 CV Boot & Mold</h2>
                         <p class="project-aff">Formula SAE</p>
                         <p class="project-description">Created innovative CV boot molds for cost-effective joint protection.</p>
-                        <span class="resume-star">★</span>
                         <div class="tags-container"></div>
                     </div>
                 </a>
